syntax = "proto3";

package admission;

service AdmissionService {
  rpc ValidateExecution(ExecutionRequest) returns (ExecutionResponse);
}

message ExecutionRequest {
  string scenarioId = 1;
  int32 users = 2;
  int32 duration = 3;
  string approvalStatus = 4;
}

message ExecutionResponse {
  bool allowed = 1;
  string reason = 2;
}
